Feat : 문제5 - solution구현 및 문제5 풀이완료